--- a/plus.html
+++ b/plus.html
@@ -1,87 +1,146 @@
-
-
 <!--
-
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 11/11/2019-->
-
+-->
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | plus</title>
+<title>Papaspyrou | Plus</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
-    <meta http-equiv="Refresh" content="0.1;url=https://alexandroshub.github.io/liveplus.html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<!-- <meta http-equiv="Refresh" content="4;url=https://robodayblog.wordpress.com/">  -->
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
-
 <style>
-body,h1,h5 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url('https://66.media.tumblr.com/c939d2f1a6b4e5f1fcfd4204a355557f/tumblr_pbnlsrwxmW1si59zfo2_1280.jpg');
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid black;
-  border-bottom: 16px solid black;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html { height: 100%; line-height: 1.8;}
+.w3-bar .w3-button {padding: 16px;}
+.bgimg { background-position: center; background-size: cover; background-image: url("https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg"); min-height: 60%;}
 </style>
 <body>
-
-<div class="bgimg w3-display-container w3-text-white">
-  <div class="w3-display-middle w3-jumbo w3-text-black">
-    <p>tech+plus</p>
-  </div>
-<div class="w3-display-topright w3-container w3-xlarge">
-<p><a href="https://alexandroshub.github.io/next.html" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-arrow-right"></i></a>
-<br><br>
-<a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-black w3-button w3-wide">W</a>
-
-<a href="https://roboday.tumblr.com/" class="w3-bar-item w3-black w3-button w3-wide">t</a>
-
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1610585155641169"
+  theme_color="#72c494"
+  logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
+  logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
-<div class="w3-display-topleft w3-container w3-xlarge">
-
- <p><a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
-</a></p>
- <p><a href="https://alexandroshub.github.io/plus-blog.html"><button class="w3-button w3-black">blog</button></a></p>
-
-    <p><a href="https://alexandroshub.github.io/plus-tv.html"><button class="w3-button w3-black">TV</button></a></p>
-   
-   <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">soon</button></a></p>
-   
-  </div>
-  
-   
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->     
+<!-- //////////////////////////Top menu////////////////////////// -->
+<style>
+.topnav {overflow: hidden; background-color: #19273C;}
+.topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
+.topnav a:hover {background-color: #d9733b; color: black;}
+.topnav a.active {background-color: #72c494; color: white;}
+.topnav .icon {display: none;}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {float: right; display: block;}}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {position: absolute; right: 0; top: 0;}
+  .topnav.responsive a {float: none; display: block; text-align: left;}}
+</style>
+<div class="topnav" id="myTopnav">
+  <a href="https://alexandroshub.github.io" class="active"  id="home">Alexandros Hub</a>
+  <a href="https://alexandroshub.github.io/cv.html">AboutMe</a> 
+  <a href="https://alexandroshub.github.io/portfolio.html">Portfolio</a>
+  <a href="https://alexandroshub.github.io/plus.html">Plus</a> 
+  <a href="https://alexandroshub.github.io/contact.html">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
-
-<!-- That's all folks! --></body></html>
-<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
+<script>
+function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
+</script>
+<!-- //////////////////////////END of Top menu////////////////////////// -->
+<!-- Header with image -->
+<header class="bgimg w3-display-container" id="home">
+ <div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">LIVE</div>
+  <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
+<span class="w3-tag">By: Papaspyrou Alexandros</span> 
+ </div>
+  <div class="w3-display-middle w3-center">
+	<span class="w3-text-white w3-hide-small" style="font-size:130px">PLUS</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">PLUS</span>
+  </div>
+  <div class="w3-display-bottomright w3-center w3-padding-large">
+    <span class="w3-text-white">xxx</span>
+  </div>
+</header>
+<!-- Add a background color and large text to the whole page -->
+<div class="w3-white  w3-large">
+<!-- About Container -->
+<div class="w3-container" id="about">
+  <div class="w3-content" style="max-width:1000px">
+ <!-- Menu Container -->
+<div class="w3-container" id="menu">
+  <div class="w3-content" style="max-width:950px">
+  <center>
+<!--PODCAST Section //////////////////////////////////////////// -->
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">PODCAST</span><span class="w3-tag w3-wide w3-green"><i class="fa fa-podcast"></i></span></h5>
+<div class="w3-center">
+soon</div>
+<!-- ////////////////////////////////////////////////////////// -->
+ 
+<!--BLOG Section //////////////////////////////////////////// -->
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">BLOG</span><span class="w3-tag w3-wide w3-blue"><i class="fa fa-keyboard-o"></i></span></h5>
+<div class="w3-center">
+<iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe></div>
+<!-- ////////////////////////////////////////////////////////// -->
+<!--TV  Section //////////////////////////////////////////// --> 
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">TV</span><span class="w3-tag w3-wide w3-purple"><i class="fa fa-television"></i></span></h5>
+<iframe width="400" height="250" src="https://www.youtube.com/embed/videoseries?list=PLka3wnglUJjrAhsBA-t2VO9c_Lt-KDUUN" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!-- ////////////////////////////////////////////////////////// --> 
+<!--PODCAST Section //////////////////////////////////////////// -->
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">Links</span></h5>
+<div class="w3-center">
+<a href="https://alexandroshub.github.io/internetexplorer.html" class="w3-button"><i class="fa fa-external-link w3-margin-right"></i>Load Internet Explorer</a>
+</div>
+<!-- ////////////////////////////////////////////////////////// --> 
+<!--PODCAST Section //////////////////////////////////////////// -->
+<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-red">NEXT</span></h5>
+<div class="w3-center">
+soon</div>
+<!-- ////////////////////////////////////////////////////////// --> 
+</center>
+</div>
+<!-- End page content -->
+</div></div></div></div>
+<!-- 
+   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+ .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+--><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
+<style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
+<footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
+<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div>
+<a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
+<div class="w3-container w3-half"><div class="w3-center w3-padding-32">
+<span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_inline_share_toolbox"></div></div></div>
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
+  <style>div.a {font-size: 12px;}</style>
+<div class="a">
+<p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
+<i class="fa fa-creative-commons"></i>
+2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
+</p></div></footer>
+<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  --><!-- 
+   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+ .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+-->
+</body></html>
