--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.11.4.20
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.18.4.20
 
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -22,7 +22,7 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway",Arial, Helvetica,sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
 body, html { height: 100%; line-height: 1.8;}
 /* Full height image header */
 .bgimg-1 {
@@ -117,7 +117,10 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
      <center>
       <div class="w3-third">
    <h3>Plus</h3>
-   <a href="https://alexandroshub.github.io/liveplus.html" class="w3-button" style="background-color: #4B759B"> <i class="fa fa-plus"></i></a>
+   
+  <a href="https://alexandroshub.github.io/raspberrypi" class="w3-btn w3-button w3-hover-blue" style="background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px;">
+   
+  <i class="fa fa-plus"></i></a>
 <div class="w3-row " style="padding-bottom:16px">
 <p>Η αγαπημένη μου ενότητα! podcasting, blogging, videos, links  και ότι άλλο μπορεί να προκύψει.</p>
 </div>
@@ -125,7 +128,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
       <div class="w3-third">
    <h3>Portfolio</h3>
 <div class="w3-row " style="padding-bottom:16px">
-<a href="https://alexandroshub.github.io/portfolio.html"  class="w3-button" style="background-color: #4B759B">
+<a href="https://alexandroshub.github.io/portfolio.html" class="w3-btn w3-button w3-hover-blue" style="background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px;">
 <b><i class="fa fa-code"></i></b>
  </a> <p>Δες εργασίες κατασκευές κώδικες και μελέτες,
  όπως και άλλα θέματα  με τα οποία έχω ασχοληθεί.
@@ -133,7 +136,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
     </div></div>
     <div class="w3-third">
    <h3> About Me</h3>
-   <a href="https://alexandroshub.github.io/cv.html" class="w3-button" style="background-color: #4B759B"><b><i class="fa fa-user-o"></i></b></a>
+   <a href="https://alexandroshub.github.io/cv.html" class="w3-btn w3-button w3-hover-blue" style="background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px;"><b><i class="fa fa-user-o"></i></b></a>
 <div class="w3-row " style="padding-bottom:16px">
 <p> Δες το βιογραφικό μου  το background τα  hobby μου και άλλα σχετικά με εμένα.</p>
 	</div>
