--- a/codingzone.html
+++ b/codingzone.html
@@ -1,4 +1,4 @@
-<!-- SpecialPage CodingZode
+<!-- SpecialPage CodingZone
 
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -15,7 +15,7 @@ Contact: 	a-papaspyrou@outlook.com.gr
 
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou | CodingZode | Arduino RaspberyPi Python and many more!</title>
+<title>Papaspyrou | CodingZone | Arduino RaspberyPi Python and many more!</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
