--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.18.4.20
+Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
+V.26.4.20 'Lightsaber'
 
-CC-BY:		Alexandros S. Papaspyrou
+CC-BY:		Alexandros Papaspyrou
 URL:		https://alexandroshub.github.io
 Contact: 	a-papaspyrou@outlook.com.gr
 Mob: 		00306940548867
@@ -17,7 +17,11 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <head>
 <meta charset="UTF-8">
+<meta name="author" content="Alexandros Papaspyrou">
+<meta name="description" content="Personal website of Papaspyrou Alexandros">
+<meta name="keywords" content="Automations, Programming , Technology">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
