--- a/logo.html
+++ b/logo.html
@@ -1,8 +1,21 @@
+
+
 <!DOCTYPE html><html><head><title>Logo</title></head><style>
 html {height: 100%;}
 body { background: #000000; color: #ffffff; margin: 0; min-height: 100%; height: 100%; position: relative;}
 .hub { display: block; font-family: sans-serif; font-weight: bold; font-size: 6vw; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
 .hub span:nth-child(2) { background: #FF9900; color: #000000; border-radius: 1vw; padding: 0 1vw 1vw 1vw; display: inline-block;}
 </style><body>
-<div class="hub"><span>Alexandros</span><span>hub</span></div>
+<div class="hub"><span>Alexandros</span><span>hub</span>
+<br>
+v.fire</div>
 </body></html>
+
+<video autoplay muted loop id="myVideo">
+  <source src="https://ve.media.tumblr.com/tumblr_pcmoe9d6Ut1si59zf_720.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+<audio id="myAudio" controls autoplay>
+  <source src="https://a.tumblr.com/tumblr_pcmp0yVS5S1si59zfo1.mp3?play_key=e6ba8f023e92bbb5aaf06052cd0c6551" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
