--- a/logo.html
+++ b/logo.html
@@ -1,6 +1,35 @@
 
+<!--
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.18.4.20
 
-<!DOCTYPE html><html><head><title>Logo</title></head><style>
+CC-BY:		Alexandros S. Papaspyrou
+URL:		https://alexandroshub.github.io
+Contact: 	a-papaspyrou@outlook.com.gr
+Mob: 		00306940548867
+Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.alexandros@gmail.com
+-->
+<!DOCTYPE html>
+<html>
+<title>AlexandrosHUB | LOGO</title>
+<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+<head>
+<meta charset="UTF-8">
+<meta name="author" content="Alexandros Papaspyrou">
+<meta name="description" content="LOGO of Papaspyrou Alexandros">
+<meta name="keywords" content="LOGO">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
+body, html { height: 100%; line-height: 1.8;}
+/* Full height image header */
 html {height: 100%;}
 body { background: #000000; color: #ffffff; margin: 0; min-height: 100%; height: 100%; position: relative;}
 .hub { display: block; font-family: sans-serif; font-weight: bold; font-size: 6vw; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
@@ -8,7 +37,7 @@ body { background: #000000; color: #ffffff; margin: 0; min-height: 100%; height:
 </style><body>
 <div class="hub"><span>Alexandros</span><span>hub</span>
 <br>
-v.fire</div>
+v.fire/may20</div>
 </body></html>
 
 <video autoplay muted loop id="myVideo">
@@ -19,3 +48,8 @@ v.fire</div>
   <source src="https://a.tumblr.com/tumblr_pcmp0yVS5S1si59zfo1.mp3?play_key=e6ba8f023e92bbb5aaf06052cd0c6551" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
+
+
+
+</body>
+</html>
