--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
-body, html { height: 100%; line-height: 1.8;}
+body, html { height: 100%; line-height: 1.8; overflow: hidden; /* Hide scrollbars */}
+	
 /* Full height image header */
 .bgimg-1 {
     background-position: center; background-size: cover;
