--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
-V.26.4.20.Fire next:'Lightsaber'
+V.01.5.20.Fire next:'Lightsaber'
 
 CC-BY:		Alexandros Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -26,8 +26,15 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+
+/* width */
+::-webkit-scrollbar { width: 5px;	background-color: #000;}
+/* Track */::-webkit-scrollbar-track {	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); 	background-color: #19273C; border-radius: 10px;}
+ /* Handle */::-webkit-scrollbar-thumb {	background-color: #4B759B;
+	background-image: -webkit-linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 25%, transparent 100%, rgba(0, 0, 0, 1) 75%, transparent)}
+/* Handle on hover */ ::-webkit-scrollbar-thumb:hover { background: black; }
 body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
-body, html { height: 100%; line-height: 1.8; overflow: hidden; /* Hide scrollbars */}
+body, html { height: 100%; line-height: 1.8;}
 	
 /* Full height image header */
 .bgimg-1 {
