--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
-V.01.5.20.Fire next:'Lightsaber'
+V.26.4.20.Fire next:'Lightsaber'
 
 CC-BY:		Alexandros Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -75,8 +76,8 @@ body, html { height: 100%; line-height: 1.8;}
 <style>
 .topnav {overflow: hidden; background-color: #19273C;}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #d9733b; color: black;}
-.topnav a.active {background-color: #72c494; color: white;}
+.topnav a:hover {background-color: #223A2C; color: white;}
+.topnav a.active {background-color: #72c494; color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
