--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -123,7 +124,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
  |  (_| |_) (_| _> |_) \/ | (_) |_|   /--\ | (/_ >< (_| | | (_| | (_) _> 
         |          |   /                                                         
 -->
-<div class="w3-center w3-padding-32 w3-black"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:orange"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:orange"></i></span><br>Thomas Edison</div>
+<div class="w3-center w3-padding-32"style="background-color: #0f1724; color: #D1D3D8;"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:#72c494"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:#72c494"></i></span><br>Thomas Edison</div>
 <!-- Promo -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
@@ -210,3 +211,4 @@ function w3_close() { mySidebar.style.display = "none";}
 ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
 ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
 ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘ -->
+
