--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
       <div class="w3-third">
    <h3>Plus</h3>
    
-  <a href="https://alexandroshub.github.io/raspberrypi" class="w3-btn w3-button w3-hover-blue" style="background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px;">
+  <a href="https://alexandroshub.github.io/plus" class="w3-btn w3-button w3-hover-blue" style="background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px;">
    
   <i class="fa fa-plus"></i></a>
 <div class="w3-row " style="padding-bottom:16px">
