--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -89,11 +90,11 @@ body, html { height: 100%; line-height: 1.8;}
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home">Alexandros Hub</a>
-  <a href="https://alexandroshub.github.io/cv.html">AboutMe</a> 
-  <a href="https://alexandroshub.github.io/portfolio.html">Portfolio</a>
-  <a href="https://alexandroshub.github.io/plus.html">Plus</a> 
-  <a href="https://alexandroshub.github.io/contact.html">Contact</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><b>Alexandros</b>Hub</a>
+  <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
+  <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
+  <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
+  <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
