--- a/git.html
+++ b/git.html
@@ -1,4 +1,5 @@
-<!-- SpecialPage Git V. 14.07.19
+
+<!-- SpecialPage Git V. 01.05.20
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -59,8 +60,8 @@ body, html {
 <style>
 .topnav {overflow: hidden; background-color: #19273C;}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #d9733b; color: black;}
-.topnav a.active {background-color: #72c494; color: white;}
+.topnav a:hover {background-color: #223A2C; color: white;}
+.topnav a.active {background-color: #72c494; color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -71,11 +72,11 @@ body, html {
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home">Alexandros Hub</a>
-  <a href="https://alexandroshub.github.io/cv.html">AboutMe</a> 
-  <a href="https://alexandroshub.github.io/portfolio.html">Portfolio</a>
-  <a href="https://alexandroshub.github.io/plus.html">Plus</a> 
-  <a href="https://alexandroshub.github.io/contact.html">Contact</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><b>Alexandros</b>Hub</a>
+  <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
+  <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
+  <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
+  <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -133,6 +134,7 @@ code: https://www.w3schools.com * https://stackoverflow.com * https://stackexcha
   
 <a href="https://www.sublimetext.com" class="w3-button w3-blue">sublimetext</a>
 <a href="https://atom.io" class="w3-button w3-blue">atom</a>
+<a href="https://code.visualstudio.com/" class="w3-button w3-blue">vsCode</a>
 
 <h5><span class="w3-tag w3-wide">git</span></h5>
 <a href="https://git-scm.com/downloads" class="w3-button w3-blue">git-scm</a>
