--- a/git.html
+++ b/git.html
@@ -98,21 +98,10 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
-
-
-
-
-
+<br>
 <!-- Menu Container -->
 <div class="w3-container" id="menu">
-  <div class="w3-content w3-center" style="max-width:700px">
-
-<link href='https://fonts.googleapis.com/css?family=Londrina Shadow' rel='stylesheet'>
-<name style=" font-family:Londrina Shadow; font-size:50px;">git 4 beginers</name><br>
-
-  
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/SWYqp7iY_Tc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
+  <div class="w3-content w3-center" style="max-width:700px">  
   
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">
@@ -139,25 +128,15 @@ code: https://www.w3schools.com * https://stackoverflow.com * https://stackexcha
 <h5><span class="w3-tag w3-wide">git</span></h5>
 <a href="https://git-scm.com/downloads" class="w3-button w3-blue">git-scm</a>
 <a href="https://gitforwindows.org" class="w3-button w3-blue">gitforwindows</a>
-
-
-    </div>
-
-    <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
-      <h5>intro</h5>
-  <p>
-
-</p>
-    </div>  
-   
-    <br>
-  
-
-    <p><strong>και μή ξεχνάτε.</strong> Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger. </p>
-    
-  </div>
 </div>
-
+<div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
+<link href='https://fonts.googleapis.com/css?family=Londrina Shadow' rel='stylesheet'>
+<name style=" font-family:Londrina Shadow; font-size:50px;">git 4 beginers</name><br>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/SWYqp7iY_Tc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+</div>  
+<br><p><strong>και μή ξεχνάτε.</strong> Αν θέλετε να μοιραστείτε την άποψη σας για το θέμα, ή να προτείνετε κάτι ακόμα, μπορείτε να μας γράψετε στο messenger. </p>
+</div>
+</div>
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
@@ -181,8 +160,6 @@ code: https://www.w3schools.com * https://stackoverflow.com * https://stackexcha
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
 -->
-
-
 <script> // Tabbed Menu
 function openMenu(evt, menuName) {
   var i, x, tablinks;
